--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ python_requires = >= 3.7
 # https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
 install_requires =
     numpy
+    matplotlib
 packages = find_namespace:
 include_package_data = True
 
